# ConnectZero

./: .gitignore  =0.20.0  =3.9.0  =5.0  Makefile  README.md  mlflow.db  pyproject.toml
.github/workflows/: test.yml
configs/: local_cpu.yaml
dashboard/: manage.py
dashboard/app/: urls.py  views.py
dashboard/app/templates/app/: dashboard.html
dashboard/connectzero_dashboard/: settings.py
docker/: Dockerfile.train
scripts/: export_results.py  quickstart.sh  scaling_experiment.py
src/connectzero/: cli.py
src/connectzero/env/: baselines.py  connect4.py
src/connectzero/eval/: elo.py  promotion.py  tournament.py
src/connectzero/infra/: metrics.py  storage.py
src/connectzero/mcts/: node.py  search.py
src/connectzero/model/: checkpoint.py  network.py
src/connectzero/selfplay/: trajectory.py  worker.py
src/connectzero/train/: learner.py  losses.py  replay_buffer.py  train_loop.py
tests/: test_connect4_rules.py
